feat: update API security scheme to use ApiKeyAuth and change host port to 8080
