# cmd/api/main.go
@@ -22,8 +22,9 @@ import (
 // @contact.email support@example.com
 // @license.name Apache 2.0
 // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
-// @host localhost:3000
+// @host localhost:8080
 // @BasePath /
+// @schemes http https
 // @securityDefinitions.apikey ApiKeyAuth
 // @in header
 // @name Authorization
