# internal/platform/server/router.go
@@ -1,6 +1,9 @@
 package server
 
 import (
+	"fmt"
+	"strings"
+
 	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/fiber/v2/middleware/cors"
 	"github.com/gofiber/fiber/v2/middleware/logger"
@@ -8,7 +11,7 @@ import (
 	"github.com/gofiber/swagger"
 	"github.com/jmoiron/sqlx"
 	"github.com/user/simple-blog/config"
-	_ "github.com/user/simple-blog/docs/swagger"
+	docs "github.com/user/simple-blog/docs/swagger"
 	authHandler "github.com/user/simple-blog/internal/modules/auth/handler"
 	authRouter "github.com/user/simple-blog/internal/modules/auth/router"
 	commentHandler "github.com/user/simple-blog/internal/modules/comments/handler"
@@ -29,6 +32,14 @@ func NewServer(
 	postHdl *postHandler.PostHandler,
 	commentHdl *commentHandler.CommentHandler,
 ) *Server {
+	hostPort := cfg.App.Port
+	if hostPort == "" {
+		hostPort = "8080"
+	}
+	docs.SwaggerInfo.Host = fmt.Sprintf("localhost:%s", hostPort)
+	docs.SwaggerInfo.BasePath = "/"
+	docs.SwaggerInfo.Schemes = []string{"http", "https"}
+
 	app := fiber.New(fiber.Config{
 		AppName:      "Simple Blog",
 		ErrorHandler: errors.GlobalErrorHandler,
@@ -37,7 +48,15 @@ func NewServer(
 	// Middlewares
 	app.Use(recover.New())
 	app.Use(logger.New())
-	app.Use(cors.New())
+	app.Use(cors.New(cors.Config{
+		AllowOrigins: strings.Join([]string{
+			"http://localhost:8080",
+			"http://127.0.0.1:8080",
+			"http://localhost:3000",
+			"http://127.0.0.1:3000",
+		}, ","),
+		AllowHeaders: "Origin, Content-Type, Accept, Authorization",
+	}))
 
 	// Swagger
 	app.Get("/swagger/*", swagger.HandlerDefault)
